design klaar behalve js

--- a/hoodie.html
+++ b/hoodie.html
@@ -11,18 +11,17 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Sleepmask</h1>
-        <h2>Price: € 6,90</h2>
+        <h1>Hoodie</h1>
+        <h2>price: € 29,99</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
     <main class="main-product">
-      <img src="Assets/mockup 1.png" alt="" />
+      <img src="Assets/Group 18.png" alt="" />
       <p>
-        The Loom sleep mask is a soft, lightweight eye mask designed to block
-        out light and help you relax. Its comfortable fit makes it easy to fall
-        asleep faster, whether you’re taking a quick nap or sleeping through the
-        night.
+        The Loom hoodie is a soft, cozy hoodie designed for comfort and everyday
+        wear. It keeps you warm, fits easily into a casual outfit, and adds a
+        relaxed, stylish touch.
       </p>
       <a href="">Buy</a>
     </main>
