--- a/shop.html
+++ b/shop.html
@@ -31,7 +31,7 @@
             Earplugs <br />
             Price: € 7,70
           </p>
-          <a href="sleepmask.html"> <img src="Assets/Buy.svg" alt=""></a>
+          <a href="earplugs.html"> <img src="Assets/Buy.svg" alt=""></a>
         </div>
       </div>
       <div class="card">
@@ -40,7 +40,7 @@
           <p>
             Sticker <br />
             Price: € 5,00
-          <a href="sleepmask.html"> <img src="Assets/Buy.svg" alt=""></a>
+          <a href="sticker.html"> <img src="Assets/Buy.svg" alt=""></a>
           </p>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <p>
             Coffee cup <br />
             Price: € 9,00
-          <a href="sleepmask.html"> <img src="Assets/Buy.svg" alt=""></a>
+          <a href="coffeecup.html"> <img src="Assets/Buy.svg" alt=""></a>
           </p>
         </div>
       </div>
@@ -60,7 +60,7 @@
           <p>
             Hoodie <br />
             Price: € 29,99
-          <a href="sleepmask.html"> <img src="Assets/Buy.svg" alt=""></a>
+          <a href="hoodie.html"> <img  class="hoodie" src="Assets/Buy.svg" alt=""></a>
           </p>
         </div>
       </div>
@@ -70,7 +70,7 @@
           <p>
             T-shirt <br />
             Price: € 25,99
-          <a href="sleepmask.html"> <img src="Assets/Buy.svg" alt=""></a>
+          <a href="tshirt.html"> <img src="Assets/Buy.svg" alt=""></a>
           </p>
         </div>
       </div>
