--- a/sticker.html
+++ b/sticker.html
@@ -11,18 +11,17 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Sleepmask</h1>
-        <h2>Price: € 6,90</h2>
+        <h1>Sticker</h1>
+        <h2>PPrice: € 5,00€</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
     <main class="main-product">
-      <img src="Assets/mockup 1.png" alt="" />
+      <img src="Assets/mockup sticker 2.png" alt="" />
       <p>
-        The Loom sleep mask is a soft, lightweight eye mask designed to block
-        out light and help you relax. Its comfortable fit makes it easy to fall
-        asleep faster, whether you’re taking a quick nap or sleeping through the
-        night.
+        The Loom sticker is a small, decorative sticker used to personalize your
+        sleep kit or belongings. It adds a fun visual touch and helps identify
+        your items easily while keeping the overall look playful and unique.
       </p>
       <a href="">Buy</a>
     </main>
