--- a/coffeecup.html
+++ b/coffeecup.html
@@ -11,18 +11,17 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Sleepmask</h1>
-        <h2>Price: € 6,90</h2>
+        <h1>Coffee cup</h1>
+        <h2>Price: € 9,00</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
     <main class="main-product">
-      <img src="Assets/mockup 1.png" alt="" />
+      <img src="Assets/Coffee_Cup_Mockup_3 2.png" alt="" />
       <p>
-        The Loom sleep mask is a soft, lightweight eye mask designed to block
-        out light and help you relax. Its comfortable fit makes it easy to fall
-        asleep faster, whether you’re taking a quick nap or sleeping through the
-        night.
+        The Loom coffee cup is a sturdy, reusable cup designed for daily use. It
+        keeps your drink warm, is easy to carry, and adds a simple, stylish
+        touch to your morning routine.
       </p>
       <a href="">Buy</a>
     </main>
