--- a/earplugs.html
+++ b/earplugs.html
@@ -11,18 +11,18 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Sleepmask</h1>
-        <h2>Price: € 6,90</h2>
+        <h1>Earplugs</h1>
+        <h2>Price: € 7,70€</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
     <main class="main-product">
-      <img src="Assets/mockup 1.png" alt="" />
+      <img src="Assets/Mockups Loom 2.png" alt="" />
       <p>
-        The Loom sleep mask is a soft, lightweight eye mask designed to block
-        out light and help you relax. Its comfortable fit makes it easy to fall
-        asleep faster, whether you’re taking a quick nap or sleeping through the
-        night.
+        The Loom earplugs are soft, comfortable plugs that reduce surrounding
+        noise so you can rest or focus more easily. They fit gently in your ears
+        and help create a quieter, more calming environment for sleep or
+        relaxation.
       </p>
       <a href="">Buy</a>
     </main>
