--- a/tshirt.html
+++ b/tshirt.html
@@ -11,18 +11,17 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Sleepmask</h1>
-        <h2>Price: € 6,90</h2>
+        <h1>T-shirt</h1>
+        <h2>Price: € 19,00</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
     <main class="main-product">
-      <img src="Assets/mockup 1.png" alt="" />
+      <img src="Assets/Group 17.png" alt="" />
       <p>
-        The Loom sleep mask is a soft, lightweight eye mask designed to block
-        out light and help you relax. Its comfortable fit makes it easy to fall
-        asleep faster, whether you’re taking a quick nap or sleeping through the
-        night.
+        The Loom T-shirt is a lightweight, breathable shirt made for daily
+        comfort. It’s easy to wear, pairs well with anything, and keeps your
+        look simple and clean.
       </p>
       <a href="">Buy</a>
     </main>
