--- a/coffeecup.html
+++ b/coffeecup.html
@@ -11,7 +11,7 @@
     <nav class="navbar-product">
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
-        <h1>Coffee cup</h1>
+        <h1>Coffee Cup</h1>
         <h2>Price: € 9,00</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
