--- a/sticker.html
+++ b/sticker.html
@@ -12,7 +12,7 @@
       <a href="shop.html"><img src="Assets/Mask group.svg" alt="" /></a>
       <div class="tekst-navbar">
         <h1>Sticker</h1>
-        <h2>PPrice: € 5,00€</h2>
+        <h2>Price: € 5,00€</h2>
       </div>
       <img class="hidden" src="Assets/Mask group1.svg" alt="" />
     </nav>
