important bij scheme

--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         :root {
-                        color-scheme: light;
+                        color-scheme: light !important;
 
         }
         body {
