--- a/test.html
+++ b/test.html
@@ -10,6 +10,8 @@
 
         }
         body {
+                                    color-scheme: light !important;
+
             background-color: #f3e8d2;
             color: #8e8c6f;
         }
