--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
     </nav>
     <main class="shop">
       <div class="card">
-        <img src="Assets/mockup 1.png" alt="" />
+       <a href="sleepmask.html"> <img src="Assets/mockup 1.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             Sleepmask <br />
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Assets/Mockups Loom 2.png" alt="" />
+       <a href="earplugs.html"> <img src="Assets/Mockups Loom 2.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             Earplugs <br />
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Assets/mockup sticker 2.png" alt="" />
+       <a href="sticker.html"> <img src="Assets/mockup sticker 2.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             Sticker <br />
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Assets/Coffee_Cup_Mockup_3 2.png" alt="" />
+       <a href="coffeecup.html"> <img src="Assets/Coffee_Cup_Mockup_3 2.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             Coffee cup <br />
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Assets/mockup loom 2.png" alt="" />
+       <a href="hoodie.html"> <img src="Assets/mockup loom 2.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             Hoodie <br />
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Assets/image 2.png" alt="" />
+       <a href="tshirt.html"> <img src="Assets/image 2.png" alt="" /> </a>
         <div class="tekst-card">
           <p>
             T-shirt <br />
