--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="nav-shop">
-      <img src="Assets/Mask group.svg" alt="" />
+       <a href="index.html"> <img src="Assets/Mask group.svg" alt="" /> </a>
       <h1>Shop</h1>
       <img src="Assets/Mask group1.svg" alt="" />
       
